variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: value nbpas
nbpas=0
^Variables:3: error: not found: value nbpas
  nbpas=nbpas + 1
  ^Variables:8: error: not found: value x
avance(x)
       ^