variables.Variables.scala.code
nbpas=0
while(estSurBiscuit()==false){
  nbpas=nbpas + 1
  avance()
}
gauche()
gauche()
avance(x)
gauche()
gauche()